frame/support/test/tests/benchmark_ui/empty_function.stderr
error: Benchmark function definitions cannot be empty!
  --> tests/benchmark_ui/empty_function.rs:10:13
   |
10 |     fn bench() {}
   |                ^^
